# lit-rust-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
lit-rust-sdk/: .env.example  Cargo.toml  README.md  audit.toml  deny.toml  pr.txt
lit-rust-sdk/examples/: execute_js.rs  naga_encrypt.rs  pkp_sign_ethereum.rs
lit-rust-sdk/src/: accs.rs  auth.rs  bls.rs  chain.rs  client.rs  config.rs  crypto.rs  e2ee.rs  error.rs  lib.rs  network.rs  pkp_signer.rs  session.rs  sev_snp.rs  types.rs  utils.rs  wrapped_keys.rs
lit-rust-sdk/src/blockchain/: contract_resolver.rs  mod.rs  pkp_nft.rs  rate_limit_nft.rs  staking.rs
lit-rust-sdk/src/blockchain/abis/: Staking.json
lit-rust-sdk/src/client/: connect.rs  decrypt.rs  encrypt.rs  execute.rs  mod.rs  pkp.rs  session_sigs.rs  state.rs
lit-rust-sdk/tests/: accs_hash.rs  connect_test.rs  decrypt_client_side.rs  decrypt_client_side_datil.rs  encrypt_test.rs  execute_js_test.rs  execute_js_with_session_sigs_test.rs  hash_test.rs  local_session_sigs_test.rs  mint_pkp_test.rs  mint_rate_limit_nft_test.rs  pkp_session_sigs_test.rs  pkp_sign_test.rs
lit-rust-sdk/tests/common/: mod.rs
mobile-sdk/ios/: .gitignore  Package.swift  README.md
mobile-sdk/ios/Examples/LitSDKDemo/LitSDKDemo/: ContentView.swift  LitSDKDemoApp.swift
mobile-sdk/ios/Examples/LitSDKDemo/LitSDKDemoTests/: LitSDKDemoTests.swift
mobile-sdk/ios/Examples/LitSDKDemo/LitSDKDemoUITests/: LitSDKDemoUITests.swift  LitSDKDemoUITestsLaunchTests.swift
mobile-sdk/ios/Sources/LitSDK/: FFI.swift  LitAuthContext.swift  LitClient.swift  LitSDKError.swift  NetworkConfig.swift  PkpModels.swift
mobile-sdk/ios/Tests/LitSDKE2ETests/: E2ESpec.swift
mobile-sdk/ios/rust-ffi/: Cargo.toml  build.rs
mobile-sdk/ios/rust-ffi/include/: lit_rust_sdk_ffi.h
mobile-sdk/ios/rust-ffi/src/: lib.rs
mobile-sdk/ios/scripts/: build-rust.sh  run-demo.sh
old_tests/: mint_rate_limit_nft_test.rs  pkp_session_sigs_test.rs
