[package]
name = "lit-rust-sdk"
version = "0.2.0"
edition = "2021"
authors = ["Lit Protocol"]
description = "Native Rust SDK for Lit Protocol - distributed key management and programmable signing"
documentation = "https://docs.rs/lit-rust-sdk"
homepage = "https://litprotocol.com"
repository = "https://github.com/LIT-Protocol/lit-rust-sdk"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["lit", "protocol", "pkp", "signing", "distributed"]
categories = ["cryptography", "authentication", "web-programming"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
rand = "0.8"
url = "2.5"
tracing = "0.1"
dashmap = "6.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
ed25519-dalek = "2.1"
siwe = "0.5"
siwe-recap = "0.2.0"
blsful = { version = "2.5.7", default-features = false, features = ["rust"] }
elliptic-curve = "0.13"
futures = "0.3"
k256 = { version = "0.13", features = ["serde", "ecdsa", "arithmetic"] }
serde_bare = "0.5.0"
alloy = { version = "1.0.24", features = ["full"] }
eyre = "0.6.12"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
