[package]
name = "lit-rust-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for the Lit Protocol Naga network"

[features]
default = []

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64ct = { version = "=1.5.3", features = ["alloc"] }
rand = "0.8"
futures = "0.3"
http = "0.2"
iri-string = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
siwe = "0.5"
siwe-recap = "0.2"
ethers = { version = "2", default-features = false, features = ["rustls", "abigen"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bs58 = "0.5"
# Use the published lit-sdk crate which provides SEV-SNP, E2EE payload, signature combining, and BLS crypto
lit-sdk = "2.0.1"
# Pin multiexp to avoid incompatibility with elliptic-curve-tools 0.1.2
multiexp = "=0.4.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
